@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-14T16:14:32Z",
+  "timestamp" : "2022-07-18T08:13:28Z",
   "count_outdated" : 427,
   "uniques_outdated" : 31,
-  "count" : 438,
-  "uniques" : 35,
+  "count" : 439,
+  "uniques" : 36,
   "views" : [
     {
       "timestamp": "2022-07-08T00:00:00Z",
@@ -30,6 +30,13 @@
       "timestamp": "2022-07-14T00:00:00Z",
       "count": 3,
       "count_minmax": [ 3, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-18T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
