@@ -1,5 +1,5 @@
 {
-  "count": 11,
+  "count": 12,
   "uniques": 2,
   "views": [
     {
@@ -20,6 +20,11 @@
     {
       "timestamp": "2022-07-14T00:00:00Z",
       "count": 3,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-07-18T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
