@@ -1,3 +1,10 @@
+2022-07-18T08:13:28Z:
+* notice: last 14d: unq all: 2 12
+* notice: prev accum: outdated-unq outdated-all / unq all: 31 427 / 35 438
+* notice: next accum: outdated-unq outdated-all / unq all: 31 427 / 36 439
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-07-18]
+
 2022-07-14T16:14:32Z:
 * notice: last 14d: unq all: 2 11
 * notice: prev accum: outdated-unq outdated-all / unq all: 31 427 / 34 435
